# ScratchRadio

./: Makefile  README.md
examples/: hello_world_file_read.sb  hello_world_file_write.sb  hello_world_framer.sb  loopback_test.sb  loopback_test.sb2  radio_loopback.sb2  rx_example.sb  rx_example.sb2  spectrum_viewer.sb  spectrum_viewer.sb2  tx_example.sb  tx_example.sb2
gnuradio/gr-scratch_radio/: CMakeLists.txt  MANIFEST.md
gnuradio/gr-scratch_radio/cmake/Modules/: scratch_radioConfig.cmake
gnuradio/gr-scratch_radio/docs/: README.scratch_radio
gnuradio/gr-scratch_radio/docs/doxygen/: Doxyfile.in
gnuradio/gr-scratch_radio/docs/doxygen/other/: group_defs.dox  main_page.dox
gnuradio/gr-scratch_radio/grc/: CMakeLists.txt  scratch_radio_cic_decimator_cc.xml  scratch_radio_cic_interpolator_cc.xml  scratch_radio_fast_agc_cc.xml  scratch_radio_manc_dec.xml  scratch_radio_manc_enc.xml  scratch_radio_message_sink.xml  scratch_radio_message_source.xml  scratch_radio_ook_demodulator.xml  scratch_radio_ook_modulator.xml  scratch_radio_simple_deframer.xml  scratch_radio_simple_framer.xml  scratch_radio_symbol_sync.xml
gnuradio/gr-scratch_radio/include/scratch_radio/: CMakeLists.txt  api.h  cic_decimator_cc.h  cic_interpolator_cc.h  fast_agc_cc.h  manc_dec.h  manc_enc.h  message_sink.h  message_source.h  ook_demodulator.h  ook_modulator.h  simple_deframer.h  simple_framer.h  symbol_sync.h
gnuradio/gr-scratch_radio/lib/: CMakeLists.txt  cic_decimator_cc_impl.cc  cic_decimator_cc_impl.h  cic_interpolator_cc_impl.cc  cic_interpolator_cc_impl.h  fast_agc_cc_impl.cc  fast_agc_cc_impl.h  manc_dec_impl.cc  manc_dec_impl.h  manc_enc_impl.cc  manc_enc_impl.h  message_sink_impl.cc  message_sink_impl.h  message_source_impl.cc  message_source_impl.h  ook_demodulator_impl.cc  ook_demodulator_impl.h  ook_modulator_impl.cc  ook_modulator_impl.h  qa_scratch_radio.cc  qa_scratch_radio.h  simple_deframer_impl.cc  simple_deframer_impl.h  simple_framer_impl.cc  simple_framer_impl.h  symbol_sync_impl.cc  symbol_sync_impl.h  test_scratch_radio.cc
gnuradio/gr-scratch_radio/python/: CMakeLists.txt  __init__.py  manc_dec.py  manc_enc.py  message_sink.py  message_source.py  ook_demodulator.py  ook_modulator.py  qa_cic_decimator_cc.py  qa_cic_interpolator_cc.py  qa_fast_agc_cc.py  qa_manc_dec.py  qa_manc_enc.py  qa_message_sink.py  qa_message_source.py  qa_ook_demodulator.py  qa_ook_modulator.py  qa_simple_deframer.py  qa_simple_framer.py  qa_symbol_sync.py  simple_deframer.py  simple_framer.py  symbol_sync.py
gnuradio/gr-scratch_radio/swig/: CMakeLists.txt  scratch_radio_swig.i
luaradio/radio/blocks/protocol/: simpledeframer.lua  simpleframer.lua
luaradio/radio/blocks/signal/: bitratesampler.lua  manchesterencoder.lua  ookdemodulator.lua  ookmodulator.lua
luaradio/radio/blocks/sinks/: shorttextmessage.lua
luaradio/radio/blocks/sources/: shorttextmessage.lua
patches/: LimeSuite.patch  luaradio_radio_blocks_init.patch  scratch_extensions.patch
scratch2/extensions/: gnuRadioDriver.py  gnuRadioExtension.js  gnuradio.html  luaRadioDriver.lua  luaRadioExtension.js
scripts/: install_deps.sh  start_gnu_radio.sh  start_lua_radio.sh
